# ModernMath

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .quartoignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _config.yml  _quarto-en.yml  _quarto-ja.yml  _quarto.yml  about-ja.html  about-ja.qmd  about.html  about.qmd  about.tex  build-multilingual.sh  check-refs.sh  check_status.sh  contributing-ja.html  contributing-ja.qmd  contributing.html  contributing.qmd  design-tokens.css  design-tokens.js  design.md  eslint.config.js  formal_verification_report.md  index-ja.html  index-ja.qmd  index.html  index.qmd  knowledge_graph.ttl  lean_mappings.json  lean_validation_results.json  mypy.ini  (+19 more)
.github/: ISSUE_TEMPLATE.md
_includes/: graph-visualization.qmd
api/: README.md  SECURITY.md  app.py  app_secure.py  cache.py  monitoring.py  monitoring_dashboard.html  openapi.yaml  search.py  security.py  start_api.sh  swagger-ui.html  test_api.py  test_cache.py  test_rate_limit.py  test_simple_rate_limit.py
design/: knowledge_graph_detailed.md
design_EN/: knowledge_graph.md  knowledge_graph_detailed.md  toc.md  translation_management.md
design_JA/: knowledge_graph.md  knowledge_graph_detailed.md  toc.md
docs/: architecture-diagrams.html  architecture-diagrams.qmd  content-authoring-tutorial.html  content-authoring-tutorial.md  content-authoring-tutorial.qmd  d3-visualization.md  deployment-guide.md  deployment-procedures.html  deployment-procedures.qmd  deployment-summary.md  deployment.md  design-tokens.md  development-environment-setup.html  development-environment-setup.qmd  enhanced-search.md  fuseki-sparql-fix.md  github-pages-deployment.md  issue-button-integration.md  issue-reporting.md  java-installation.md  lean-integration.md  lean4-installation.md  multilingual-setup.md  project-status-2025-01-20.md  quarto-installation.md  style-guide.md  troubleshooting-guide.html  troubleshooting-guide.qmd  workflow-optimization-summary.md
en/: about-ja.html  about.html  contributing-ja.html  contributing.html  design-tokens.css  index-ja.html  index.html  knowledge_graph.ttl  search-ja.html  search.html  search.json  styles-multilingual.css  styles.css  visualizations-ja.html  visualizations.html
formal/: MathKnowledgeGraph.lean  README.md  lake-manifest.json  lakefile.lean  lean4-integration-plan.md
fuseki/: README.md
ja/: about-ja.html  about.html  contributing-ja.html  contributing.html  index.html  (+9 more)
(+5982 files in other folders)
