[project]
name = "math-knowledge-graph"
version = "0.1.0"
description = "A full-scale mathematical knowledge graph wiki using Quarto, RDF/OWL, and interactive visualizations"
authors = [
    {name = "Math Knowledge Graph Team"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "rdflib (>=7.1.4,<8.0.0)",
    "python-frontmatter (>=1.1.0,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pyvis (>=0.3.2,<0.4.0)",
    "flask (>=3.1.1,<4.0.0)",
    "sparqlwrapper (>=2.0.0,<3.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "whoosh (>=2.7.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.0"

