[tool.poetry]
name = "math-knowledge-graph"
version = "0.1.0"
description = "A full-scale mathematical knowledge graph wiki using Quarto, RDF/OWL, and interactive visualizations"
authors = ["Math Knowledge Graph Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
rdflib = "^7.1.4"
python-frontmatter = "^1.1.0"
beautifulsoup4 = "^4.13.4"
pyvis = "^0.3.2"
flask = "^3.1.1"
sparqlwrapper = "^2.0.0"
flask-cors = "^6.0.1"
whoosh = "^2.7.4"
lean-dojo = "^4.20.0"
flask-limiter = "^3.12"
pyyaml = "^6.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.0"
pylint = "^3.3.7"
pyright = "^1.1.403"
pre-commit = "^4.2.0"
types-pyyaml = "^6.0.12.20250516"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.modernmath.translations]
source_language = "en"
target_languages = ["ja"]
status_file = "translations-status.yml"
ignore_patterns = ["**/index.qmd", "**/_metadata.yml", "**/_extensions/**"]
